Jann 30/objects/ARE_RFA__c.object
<CustomObject>
    <description>RFA R1 - Actual ROSS Exchange Rate to be referenced in currency calculations for RFAs</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only Active AREs will be displayed while creating new RFA</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>April_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>April Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>August Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Rate used for Business Plans on an RFA</description>
        <label>BP Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country associated with the exchange rate.</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>December_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>December Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>February Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JanuaryRate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>January Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>July Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>June Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>March Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>May Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>November Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>October Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>September Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>ARE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All - Active</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All - Inactive</label>
    </listViews>
    <nameField>
        <label>Functional Currency</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id00000017tOwEAI_00Nd0000005SYh9EAG</fullName>
        <active>true</active>
        <errorMessage>You may only select an Active Functional Currency (FC).  Contact the appropriate Location Coordinator if you cannot find a particular Functional Currency.</errorMessage>
        <field>RFA__c.Functional_Currency__c</field>
        <filterItems>
            <field>ARE_RFA__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>RFA_Functional Currency (FC) *</name>
    </namedFilters>
    <pluralLabel>ARE</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>